--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,23 +18,27 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: hidden;
+}
+
+.scroll {
   overflow-y: auto;
 }
 
-body::-webkit-scrollbar {
+.scroll::-webkit-scrollbar {
   width: 8px; /* Ancho del scrollbar */
 }
 
-body::-webkit-scrollbar-track {
+.scroll::-webkit-scrollbar-track {
   background: #18181b; /* Color de fondo del track */
 }
 
-body::-webkit-scrollbar-thumb {
+.scroll::-webkit-scrollbar-thumb {
   background: #888; /* Color del thumb */
   border-radius: 10px; /* Bordes redondeados */
 }
 
-body::-webkit-scrollbar-thumb:hover {
+.scroll::-webkit-scrollbar-thumb:hover {
   background: #555; /* Color del thumb al pasar el mouse */
 }
 
